# crystal

./: .clang-format  .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.Debian  README.md  Socket.cc  Socket.h  TODO  acconfig.h  autogen.sh  commandeditor.cc  commandeditor.h  commands.cc  commands.h  common.cc  common.h  configure.in  crystal.6  crystal.cc  crystal.h  crystal.lua  crystal.spec.in  display.cc  grid.cc  grid.h  io.cc  io.h  keybindings.cc  main.cc  mccpDecompress.c  mccpDecompress.h  scripting.cc  scripting.h  telnet.cc  (+2 more)
.github/workflows/: ci.yml
debian/: changelog.real  control  copyright  crystal-default.ex  crystal.substvars  docs  rules  watch.ex
po/: ChangeLog  POTFILES.in  en@IPA.po
